syntax = "proto3";
package assertionclassifier;

option java_package = "edu.uw.bhi.bionlp.covid.parser.assertionclassifier";

service AssertionClassifier {
    rpc PredictAssertion (AssertionClassifierInput) returns (AssertionClassifierOutput) {}
}

/*
 * Assertion Classifier
 */
message AssertionClassifierInput {
    string text = 1;
    int32 start_index = 2;
    int32 end_index = 3;
}

message AssertionClassifierOutput {
    string prediction = 1;
}